[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Shape.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Block.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/ImitationShape.gd" type="Script" id=3]

[node name="Shape" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Block0" parent="." instance=ExtResource( 2 )]
position = Vector2( -60, 0 )

[node name="Block1" parent="." instance=ExtResource( 2 )]
position = Vector2( -20, 0 )

[node name="Block2" parent="." instance=ExtResource( 2 )]
position = Vector2( 20, 0 )

[node name="Block3" parent="." instance=ExtResource( 2 )]
position = Vector2( 60, 0 )

[node name="DropTimer" type="Timer" parent="."]
wait_time = 1.04

[node name="ImitationShape" type="KinematicBody2D" parent="."]
script = ExtResource( 3 )

[node name="Block0" parent="ImitationShape" instance=ExtResource( 2 )]
visible = false
disabled = true

[node name="Block1" parent="ImitationShape" instance=ExtResource( 2 )]
visible = false
disabled = true

[node name="Block2" parent="ImitationShape" instance=ExtResource( 2 )]
visible = false
disabled = true

[node name="Block3" parent="ImitationShape" instance=ExtResource( 2 )]
visible = false
disabled = true
[connection signal="timeout" from="DropTimer" to="." method="_on_DropTimer_timeout"]
